# confocal-colocalization-tool

./: .gitignore  LICENSE  README.md  coloc_analyzer.py  pyproject.toml  requirements.txt
src/napari_coloc_analyzer/: __main__.py  _core.py  _widget.py  napari.yaml
